fixed padding on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5402,7 +5402,7 @@ Responsive For Mobile & Tablet Devices
 	}
 
 	.site_header_1+main {
-		padding-top: 82px;
+		padding-top: 110px;
 	}
 
 	.hero_banner.style_1 .content_wrap {
